@@ -1,3 +1,10 @@
+2008-04-21  Ben Van Mechelen  <me@benvm.be>
+
+	* plugins/dashboard/dashboard.glade:
+	* plugins/dashboard/dashboard.py:
+	    Add the plugin prefs including a notebook page to PrefsManager
+
+
 2008-04-19  Ben Van Mechelen  <me@benvm.be>
 
 	* garmon/garmon_app.py:
